Implement StatefulSet multi-replicas
